stopped annoying background image shifting

--- a/styles/containers.css
+++ b/styles/containers.css
@@ -13,15 +13,14 @@
 
 .main {
 	/* width: 86.58vw; should be 88%, but there is some mysterious padding that appears between the nav-bar and main div */
-	width: 88vw;
+	width: 88vw !important;
 	min-height: 100vh !important;
+		
+	position:relative;
 	
-	/* overflow: hidden; */
-	
-	position: relative;
-	
-	top: 0;
-	left: 12vw;
+	/* top: 0 ; */
+	left: 12vw !important;
+	right:0 !important;
 	margin-left: 0 !important;
 	margin-right: 0 !important;
 	margin-top: 0 !important;
